--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,7 +24,7 @@
           var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
         })();
   %body
-    .navbar.navbar-fixed-top
+    -#.navbar.navbar-fixed-top
       .navbar-inner
         .container
           = link_to 'AvMobile', blurbs_path, class: 'brand'
